--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\V\\Miniconda3\\envs\\user\\python.exe"
+    "python.pythonPath": "C:\\Users\\Apitec Jason\\Miniconda3\\envs\\user\\python.exe"
 }
